--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/Nuevo.cshtml
@@ -162,7 +162,7 @@
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
-
+                console.log(data);
                 $.each(data, function (i, row) {
                     $("#IdPeriodo").append("<option value=" + row.IdPeriodo + ">" + row.descripcion + "</option>");
                 });
