--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/PreLiquidacion/_GridViewPartial_liquidacion_empleado_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/PreLiquidacion/_GridViewPartial_liquidacion_empleado_det.cshtml
@@ -74,6 +74,7 @@
             column.EditFormSettings.Visible = DefaultBoolean.True;
         });
 
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
         settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "Valor");
         settings.Settings.ShowFooter = true;
 
