--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ActaFiniquito/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ActaFiniquito/Modificar.cshtml
@@ -14,6 +14,7 @@
     @Html.HiddenFor(q => q.IdEmpresa)
     @Html.HiddenFor(q => q.IdEmpleado)
     @Html.HiddenFor(q => q.IdActaFiniquito)
+    @Html.HiddenFor(q => q.IdTransaccionSession)
 
     <div class="row">
         <div class="col-md-12">
