--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ParametrosContable/_GridViewPartial_cta_ctble_provisiones.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ParametrosContable/_GridViewPartial_cta_ctble_provisiones.cshtml
@@ -17,6 +17,7 @@
 
         settings.CommandColumn.Visible = true;
         settings.CommandColumn.ShowEditButton = true;
+        settings.CommandColumn.ShowNewButtonInHeader = true;
 
         settings.KeyFieldName = "Secuencia";
 
