--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ComprobanteContable/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ComprobanteContable/Modificar.cshtml
@@ -48,7 +48,7 @@
             <div class="col-md-1">
                 <label for="IdNuevo"></label>
                 <div class="form-group">
-                    <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo","ComprobanteContable",new { Area = "Inventario", IdEmpresa = Model.IdEmpresa },null)">
+                    <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo","ComprobanteContable",new { Area = "Contabilidad", IdEmpresa = Model.IdEmpresa },null)">
                         <i class="fa fa-plus"></i>
                     </a>
                 </div>
